# cookiecutter-python-project

./: .gitignore  cookiecutter.json  {{ cookiecutter.project_name }}.sublime-project
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_name }}/: build-packages.cmd  development-mode.cmd  publish-packages.cmd  remove-built-packages.cmd
{{ cookiecutter.project_name }}/applications/application-{{ cookiecutter.project_name }}/: README.rst  setup.cfg
{{ cookiecutter.project_name }}/applications/application-{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/: __init__.py  resources.qrc  scripting.py
{{ cookiecutter.project_name }}/modules/module-{{ cookiecutter.project_name }}/: .gitignore  LICENSE.rst  README.rst  setup.cfg
