[metadata]
name             = py{{ cookiecutter.repository_name }}
version          = attr: py{{ cookiecutter.package_name }}.__version__
url              = https://{{ cookiecutter.github_url }}/{{ cookiecutter.github_username }}/py{{ cookiecutter.repository_name }}

author           = {{ cookiecutter.full_name }}
author-email     = {{ cookiecutter.email }}

description                   = {{ cookiecutter.project_description }}
long_description              = file: README.rst, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst

license          = {{ cookiecutter.license }}
license_file     = LICENSE.rst
license_files    =
    LICENSE.rst

keywords         = {{ cookiecutter.project_keywords }}

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    License :: Other/Proprietary License :: {{ cookiecutter.license }}

[options]
zip_safe        = true
python_requires = >= 3.7

packages = find:

setup_requires =
    setuptools
    wheel

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
